Portfolio Press 2.1

- Fix for three tier menus
- Fix for Google font loading from https

Portfolio Press 2.0

- New menu styling
- Portfolio templates and styles rebuilt
- Support post formats in portfolio layout
- Icon font
- Single column is now 980px
- Support Jetpack Carousel Module
- Update gallery shortcode to HTML5 markup
- Update styling for image captions

Portfolio Press 1.8

- Larger screenshot for WordPress 3.8
- Compatibility update for Options Framework 1.7

Portfolio Press 1.7

- Show larger thumbnails on one-column layouts
- Increase thumbnail sizes on regular layouts
- Fix for max-width logo in Firefox
- Show thumbnails on search pages

Portfolio Press 1.6

- Update $content_width on full page templates
- Improvements for password protected portfolio posts
- Normalize post meta
- New portfoliopress_posts_per_page filter

Portfolio Press 1.5

- Add single portfolio post navigation back
- Add fullwidth portfolio thumnail size
- Max-width for iframe,embeds and objects
- Better responsive menu
- Author page displays posts and author description

Portfolio Press 1.4.1

- Fixed theme dependency on Options Framework plugin
- Updated inline theme documentation

Portfolio Press 1.4

- Added box shadows to borders
- Max-width for logo image
- Update portfolio-large size to 640px
- Remove prev/next post navigation on single posts and portfolio items
- Add borders around post meta
- Make the full width layout option max-width 780px
- Update screenshot image for retina
- Show titles and descriptions on portfolio taxonomy pages

Portfolio Press 1.3.0

- Fix for portfolio pages when single column selected
- Allow image galleries to display in archives
- Fix for plugin notices
- Update thumbnail sizing (props @alexkunz)

Portfolio Press 1.2.2

- Fix for image alignment bug (introduced in 1.2)

Portfolio Press 1.2.1

- Fix for JS error that causes scripts to break

Portfolio Press 1.2.0

- Front end customizer support
- Additional layout option (single column)