@@ -210,11 +210,14 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 }
 #logo {
 	float:left;
+	padding-right:75px;
 	max-width: 100%;
 	line-height:1;
-	padding-right:75px;
 	word-wrap: break-word;
 }
+.clear-menu #logo {
+	padding-right:0;
+ }
 #logo #site-title {
 	font-family: 'Rokkitt', sans-serif;
 	color: #fff;
@@ -288,6 +291,11 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 	text-decoration: inherit;
 	vertical-align: text-bottom;
 	margin-right:10px;
+}
+.clear-menu .menu-toggle {
+	position: relative;
+	top:10px;
+	right:auto;
 }
 
 /* Structure */
